# sdkcpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  sandbox.cpp
examples/locator/: Helper.h  MusicService.cpp  MusicService.h  TextService.cpp  TextService.h  VideoService.cpp  VideoService.h  XService.h
include/sdk/: Allocator.h  Lazy.h  Locator.h  Pinned.h  Result.h  Router.h  Scoper.h
include/sdk/detail/: Defs.h  Meta.h
